# cirobotix

./: .bandit.yml  .gitignore  404.html  ETHICS.md  LICENSE.md  MAKEFILE  README.md  experiment_001.md  export.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
.codegen/test_001/: prompt.md  response.md  review.md  task.json
.codegen/test_002/: prompt.md  response.md  review.md  task.json
.github/workflows/: ci.yml  open-pr-on-success.yml  publish.yml  test.yml
api/core/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/data-flow/: index.html
architecture/overview/: index.html
architecture_decisions/glossary/: index.html
archive/legacy-notes/: index.html
cirobotix/: __init__.py  arc42_extract.py  cli.py  config_loader.py  confluence_client.py  generator.py  jira_client.py  jira_ready_selector.py  scaffolds.py
concepts/tasks/: index.html
config/profiles/: default.yaml
config/projects/: local_project.yaml
core/: applier.py  artifact.py  atomic_task.py  atomic_task_loader.py  blueprint.py  checker.py  context.py  context_assembler.py  context_dependency.py  context_dependency_resolver.py  executor.py  formatter.py  machine.py  production_line.py  profile_loader.py  project_context.py  project_loader.py  prompt.py  python_class_discovery.py  registry.py  request_id_builder.py  review.py  target_analysis.py  target_inspector.py  test_runner.py  validator.py  work_order.py  work_order_cli_review_writer.py  work_order_cli_runtime_writer.py  work_order_cli_service.py  work_order_draft_builder.py  work_order_draft_request.py  work_order_loader.py  work_order_proposal_prompt_builder.py  work_order_proposal_service.py  work_order_proposal_writer.py  work_order_type.py  work_order_writer.py  writer.py
core/appliers/: applier.py
core/blueprints/: catalog.py  python_data_model.py  (+2 more)
docs/: index.md
search/: search_index.json
tasks/: test_output_checker.yaml
tests/: test_config_loader.py  test_pipeline_smoke.py
work_orders/: applier_unit_test.yaml  blueprint_unit_test.yaml  test_002.yaml
(+137 files in other folders)
