[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cirobotix"
version = "0.1.0"
description = "Architecture-driven software production system"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "cirobotix" }]
dependencies = [
  "openai>=2.30.0,<3.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "ruff>=0.15.0,<0.16.0",
]

[project.scripts]
cirobotix = "cirobotix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cirobotix", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "docs", "site"]

[tool.vulture]
paths = ["core", "."]
exclude = ["tests/", ".venv/", "docs/", "site/"]
min_confidence = 80
